openspeedtest/openspeedtest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openspeedtest-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: openspeedtest-server
  name: openspeedtest-server
  namespace: openspeedtest-server
spec:
  selector:
    matchLabels:
      app: openspeedtest-server
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: openspeedtest-server
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - image: 	openspeedtest/latest:latest
        imagePullPolicy: Always
        name: openspeedtest-server
        volumeMounts:
        - mountPath: /data
          name: openspeedtest-content

      volumes:
      - name: openspeedtest-content
        persistentVolumeClaim:
          claimName: openspeedtest-claim
