openspeedtest/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest-server
  namespace: openspeedtest-server
spec:
  selector:
    app: openspeedtest-server
  ports:
    - protocol: TCP
      port: 7575
      targetPort: 7575
